--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
       document.body.appendChild(message);
     }, 3000); // 5초 후에 메시지를 화면에 나타내도록 설정
    document.addEventListener('click', function() {
-    window.location.href = 'file:///C:/Users/leeji/Desktop/%EC%84%B8%EC%9B%94%ED%98%B8/%EB%8F%84%EC%9E%85/index.html';
+    window.location.href = 'https://happy030day.github.io/dkaeho1/';
   });
   </script>
 </body>
 </html>
-<a href="file:///C:/Users/leeji/Desktop/%EC%84%B8%EC%9B%94%ED%98%B8/%EB%8F%84%EC%9E%85/index.html"></a>
+<a href="https://happy030day.github.io/dkaeho1/"></a>
 </script>
 </body>
 </html>
