--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
       document.body.appendChild(message);
     }, 3000); // 5초 후에 메시지를 화면에 나타내도록 설정
    document.addEventListener('click', function() {
-    window.location.href = 'https://happy030day.github.io/dkaeho1/';
+    window.location.href = 'https://happy030day.github.io/dkseho2/';
   });
   </script>
 </body>
 </html>
-<a href="https://happy030day.github.io/dkaeho1/"></a>
+<a href="https://happy030day.github.io/dkseho2/"></a>
 </script>
 </body>
 </html>
